# hg-engine

./: .gitattributes  .gitignore  .gitmodules  BaseExperienceTable.c  CONFIG.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  HiddenAbilityTable.c  Makefile  README.md  TODO.txt  a055  a056  armhooks  bak.py  bytereplacement  charmap.txt  docker-login.cmd  docker-login.sh  docker-makerom.cmd  docker-makerom.sh  dump.mk  gen4_trainer_ai.md  hello.sav  hooks  linker.ld  linker_battle.ld  linker_field.ld  linker_pokedex.ld  narcs.mk  offset_def.s  output.txt  overlays.mk  replace1.py  repoints  requirements.txt  rom.ld  routinepointers  scr_seq_00003_commonscript.s  (+5 more)
.githooks/: pre-commit
.zed/: tasks.json
armips/: global.s
asm/: arm_hooks.s  battle_calc_damage.s  battle_hooks.s  general_hooks.s  other_hook.s  qmath.s  thumb_help.s
calc_gen/: helpers.rb  inc_converter.rb  npoint.json  npoint_generate.rb  readme.txt
data/: BabyMons.c  BackgroundGfx.c  BaseExperienceTable.c  BattleTests.c  EggLearnsetOffsets.c  EggLearnsets.c  Encounters.c  EvoData.c  Evolutions.c  FollowerProperties.c  FormReversionMapping.c  FormToSpeciesMapping.c  Headbutt.c  HeightTable.c  HiddenAbilityTable.c  HiddenItems.c  IconPaletteTable.c  LevelupLearnsetOffsets.c  LevelupLearnsets.c  MoveData.c  Moves.c  PokeFormDataTbl.c  PokedexArea.c  PokedexAreaData.c  PokedexSort.c  PokedexSortData.c  RegionalDex.c  SafariEncounters.c  Species.c  SpeciesData.c  SpeciesToOWFormFemale.c  SpeciesToOWGfx.c  (+4 more)
tools/source/nitrogfx/: Makefile  gfx.c  gfx.h  main.c  meson.build  meson_options.txt  options.h
(+10307 files in other folders)
